# iot-identity-service

./: Cargo.toml
.github/: dependabot.yaml
aziot/: Cargo.toml
aziot/src/internal/: common.rs
aziotctl/: Cargo.toml
aziotd/: Cargo.toml
azure-iot-mqtt/: Cargo.toml
azure-iot-mqtt/examples/: device.rs  module.rs
azure-iot-mqtt/examples/common/: mod.rs
azure-iot-mqtt/src/: device.rs  identity.rs  lib.rs  module.rs
cert/aziot-certd/: Cargo.toml
cert/aziot-certd/src/: config.rs  error.rs  est.rs  lib.rs
docs/running/: aziot-identityd.md
http-common/: Cargo.toml
http-common/src/: connector.rs  lib.rs  proxy.rs
hyper-uds/: README.md
identity/aziot-cloud-client-async-common/: Cargo.toml
identity/aziot-cloud-client-async-common/src/: lib.rs
identity/aziot-dps-client-async/: Cargo.toml
identity/aziot-dps-client-async/src/: lib.rs
identity/aziot-hub-client-async/src/: lib.rs
identity/aziot-identity-common/src/: lib.rs
identity/aziot-identityd/: Cargo.toml
identity/aziot-identityd/src/: identity.rs  lib.rs
identity/aziot-identityd/src/http/: get_caller_identity.rs
iotedged/: Cargo.toml
key/aziot-key-client-async/src/: lib.rs
key/aziot-key-openssl-engine/: Cargo.toml
key/aziot-key-openssl-engine-shared-test/: Cargo.toml
key/aziot-keyd/src/: config.rs
key/aziot-keys/: Cargo.toml  aziot-keys.h
openssl2/: Cargo.toml
pkcs11/pkcs11/: Cargo.toml
