[package]
name = "http-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "server", "tcp"], optional = true }
hyper-openssl = "0.9"
hyper-proxy = { git = "https://github.com/massand/hyper-proxy.git", branch = "sslstream"}
libc = "0.2"
log = "0.4"
nix = "0.18"
openssl = "0.10"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread"], optional = true }
typed-headers = "0.2"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = "1"

[features]
tokio1 = ["hyper", "tokio"]
